# banFlow

./: .eslintignore  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.erb/configs/: webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.github/ISSUE_TEMPLATE/: 1-Bug_report.md  2-Question.md  3-Feature_request.md
.github/workflows/: README.md  build.yml  pr-check.yml  publish.yml  test.yml
.husky/: pre-commit
banFlowProjects/: NecroMatcher.json  _gameState.json
docs/: GITHUB_PR_FEATURE.md
port/banflow-tauri/: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
port/banflow-tauri/src-tauri/: Cargo.toml  history.txt  tauri.conf.json
port/banflow-tauri/src-tauri/capabilities/: default.json
port/banflow-tauri/src-tauri/src/: backup.rs  database.rs  diagrams.rs  iterations.rs  launch_prefs.rs  lib.rs  metadata.rs  models.rs  nodes.rs  parents.rs  plugins.rs  tags.rs  trello_sync.rs
port/banflow-tauri/src-tauri/tests/: migrated_code_test.rs
release/app/: package-lock.json  package.json
src/: ViewManager.jsx  index.css  main.tsx  timer.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Sources/: HealthKitBridge.swift
src-tauri/src/: database.rs  docs.rs  git_projects.rs  lib.rs  main.rs  metadata.rs  parents.rs  plugins.rs  timer.rs
src-tauri/tests/: all_modules_test.rs  e2e_test.rs  migrated_code_test.rs
src/config/: index.js
src/contexts/: GitContext.jsx
src/hooks/: useAsyncAction.ts  (+2 more)
(+306 files in other folders)
